What's New for PSPRadio 
========================
0.36

0.36-pre3 (r)
(raf) Started adding SHOUTcast support
(sandberg) Implemented a VRAM memory manager, so all textures are now loaded from files
into VRAM.
(sandberg) Added full playlist and playlist entries support for the 3D UI.

0.36-pre2 (r364)
(sandberg) Added support for the option menu in the 3D UI.
(jpfouch48) GraphicsUI playlist browser and playlist item browser is now functional
(jpfouch48) Made the text display funtions more modulare to make future enhancments easier
(jpfouch48) Added a unique ItemIndex to the MetaData structure and directorydata structure to make the
			browsable playlist integration a little bit easier
(raf) Some more work on the OGG decoder.
(raf) Now TextUI will display selectable lists for playlist and playlist entries
(raf) Made the current selections more dynamic so they follow the list.
(raf) Changed user interface for playlist access: User now uses UP/DOWN to select a playlist, then
press X or O to go and select an entry. Navigation in entries box is also with UP/DOWN.
User can also use <- or -> to go back and forth between List and Entries. (need to iron out)
(jpfouch48) Added options screen
(jpfouch48) Updated how playlist scrolls
(jpfouch48) Fixed problem with theme clipping song filename in upper pannel
(sandberg) Added support for displaying the MetaData in the 3D UI.

0.36-pre1 (r336)
------------------------------------------------------------------------
r320 | rafpsp | 2005-10-17 02:19:15 -0400 (Mon, 17 Oct 2005) | 38 lines

svn merge -r305:319 branches/OGGSupportAddition to trunk/
	----------------------------------------------------------------------
	r319 | rafpsp | 2005-10-17 01:52:33 -0400 (Mon, 17 Oct 2005) | 1 line
	
	Now if content type is not defined, it defaults to MPEG. Also added case for AAC (not supported yet)
	------------------------------------------------------------------------
	r318 | rafpsp | 2005-10-17 01:51:34 -0400 (Mon, 17 Oct 2005) | 1 line
	